--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "chromedriver": "^2.46.0",
     "nightwatch": "^0.9.21"
   },
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.19.0"
+  },
   "e2e": "BABEL_ENV=test node test/runner.js"
 }
